# libretro-vecx

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  Makefile  Makefile.common  Makefile.libretro  dots.h  e6809.c  e6809.h  e8910.c  e8910.h  libretro.c  libretro.cpp  libretro_core_options.h  osint.c  osint_libretro.c  vecx.c  vecx.h
cmake_modules/: FindSDL_gfx.cmake
jni/: Android.mk
libretro/: libretro.c
libretro/jni/: Android.mk
